[gd_scene load_steps=2 format=3 uid="uid://c5pchar001"]

[ext_resource type="Script" path="res://scripts/game/player_character.gd" id="1_pchar"]

[node name="PlayerCharacter" type="Node2D"]
script = ExtResource("1_pchar")

[node name="Body" type="ColorRect" parent="."]
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
color = Color(0.4, 0.7, 1, 1)

[node name="NameLabel" type="Label" parent="."]
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = -20.0
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CommandLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -60.0
offset_right = 20.0
offset_bottom = -40.0
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarLabel" type="Label" parent="."]
offset_left = -40.0
offset_top = 18.0
offset_right = 40.0
offset_bottom = 38.0
text = "‚≠ê3"
horizontal_alignment = 1
vertical_alignment = 1
